--- a/flaka-ci.yml
+++ b/flaka-ci.yml
@@ -1,6 +1,8 @@
 services:
   test:
     path: /
-    command: 
-      - command 1
+    command:
+      - echo COMMAND 1
+      - echo COMMAND 2
+      - echo COMMAND 3
 port: 2000
